--- a/First_Tests_Bloom.ipynb
+++ b/First_Tests_Bloom.ipynb
@@ -61,7 +61,7 @@
     "import blpapi\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime as dt"
+    "from datetime import datetime, timedelta"
    ]
   },
   {
@@ -454,6 +454,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ecf8f564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date = datetime(1999, 1, 28)\n",
+    "end_date = datetime.now()\n",
+    "\n",
+    "dates_list = [start_date + i * timedelta(days=30) for i in range((end_date - start_date).days // 30 + 1)]\n",
+    "\n",
+    "print(dates_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa2f7ddb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "82b1618a",
    "metadata": {},
    "outputs": [],
@@ -484,8 +507,8 @@
     "# bdh : \n",
     "tickers = [\"GLE FP Equity\", \"FP FP Equity\"]\n",
     "strFields = [\"PX_LAST\", \"PX_VOLUME\"]\n",
-    "startDate = dt.datetime(2020,10,1) \n",
-    "endDate = dt.datetime(2020,11,3)\n",
+    "startDate = datetime(2020,10,1) \n",
+    "endDate = datetime(2020,11,3)\n",
     "test_bdh = blp.bdh(strSecurity=tickers, strFields = strFields, startdate = startDate, enddate = endDate)"
    ]
   },
@@ -511,6 +534,133 @@
    "outputs": [],
    "source": [
     "BLP.closeSession()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7342eff5",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f6a9deb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date = datetime(1999, 1, 28)\n",
+    "end_date = datetime.now()\n",
+    "\n",
+    "# dates_list = [start_date + i * timedelta(days=30) for i in range((end_date - start_date).days // 30 + 1)]\n",
+    "# print(dates_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1521357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_compo_index = pd.DataFrame()\n",
+    "\n",
+    "current_date = start_date\n",
+    "while current_date <= end_date:\n",
+    "    df_d = blp.bdh(strSecurity=tickers, strFields = strFields, snapshot_date = current_date)\n",
+    "    df_d['Date'] = current_date #### Warning nom de la colonne \n",
+    "    df_compo_index = pd.concat([df_compo_index, df_d], ignore_index=True)\n",
+    "    # ou pd.merge(df_final, df_d, how='outer', on='Date') si nb lignes différentes \n",
+    "    current_date += timedelta(days=30)  # ou current_date.replace(day=28) pour rester le 28 du mois suivant\n",
+    "\n",
+    "print(df_final)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd3b2c0a",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f28c9ea",
+   "metadata": {},
+   "source": [
+    "#### Stocks List to import : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a355623d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tickers = df_final.stack()\n",
+    "tickers = df_tickers.unique().tolist()\n",
+    "print(tickers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fa3c0d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strFields = [\"PX_LAST\", \"PX_VOLUME\"] ### ++ ? \n",
+    "# start_date = datetime(1999, 1, 28)\n",
+    "# end_date = datetime.now()\n",
+    "df_stocks = blp.bdh(strSecurity=tickers, strFields = strFields, startdate = start_date, enddate = end_date, per='MONTHLY')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b820887a",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38410125",
+   "metadata": {},
+   "source": [
+    "#### Data exportation : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21bf99ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name_compo = \"Bloomberg_data_compo.xlsx\"\n",
+    "file_path_compo = 'chemin/vers/ton/' & file_name\n",
+    "\n",
+    "test_bds.to_excel(file_path_compo, index=True)\n",
+    "# df_compo_index.to_excel(file_path_compo, index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5baa2e4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name_stocks = \"Bloomberg_data_stocks.xlsx\"\n",
+    "file_path_stocks = 'chemin/vers/ton/' & file_name\n",
+    "\n",
+    "test_bdh.to_excel(file_path_stocks, index=True)\n",
+    "# df_compo_index.to_excel(file_path_stocks, index=True)"
    ]
   }
  ],
