--- a/Archives/First_Tests_Bloom.ipynb
+++ b/Archives/First_Tests_Bloom.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1fc92e6b",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ac3db056",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7cfb83f5",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
     "        # Exploit data \n",
     "        #-----------------------------------------------------------------------\n",
     "        \n",
-    "         for msg in list_msg:\n",
+    "        for msg in list_msg:\n",
     "            ticker = msg.getElement(SECURITY_DATA).getElement(SECURITY).getValue()\n",
     " \n",
     "            # Create dict for each field\n",
@@ -343,7 +343,7 @@
     "    #-----------------------------------------------------------------------------------------------------\n",
     "    #-----------------------------------------------------------------------------------------------------\n",
     "\n",
-    "     def bds(self, strSecurity, strFields, snapshot_date, curr=None):\n",
+    "    def bds(self, strSecurity, strFields, snapshot_date, curr=None):\n",
     "        \n",
     "        \"\"\"\n",
     "            Summary:\n",
@@ -376,8 +376,11 @@
     "            request.append('fields', strF)\n",
     "        for strS in strSecurity:\n",
     "            request.append('securities', strS)\n",
-    "        request.set('date', snapshot_date.strftime('%Y%m%d'))\n",
-    "        request.set('currency', curr)\n",
+    "        # request.set('date', snapshot_date.strftime('%Y%m%d'))\n",
+    "        # request.set('currency', curr)\n",
+    "        o = request.getElement('overrides').appendElement()\n",
+    "        o.setElement('value', snapshot_date)\n",
+    "        \n",
     "    \n",
     "        #-----------------------------------------------------------------------\n",
     "        # Send request\n",
@@ -476,25 +479,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "82b1618a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Session open\n"
+     ]
+    }
+   ],
    "source": [
     "blp = BLP()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2d7609d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending request\n"
+     ]
+    }
+   ],
    "source": [
     "# bdp : \n",
-    "strFields = [\"AMT_OUTSTANDING\", \"PX_LAST\"]\n",
-    "date = '20200310'\n",
+    "strFields = [\"PX_LAST\", \"PX_VOLUME\"]\n",
+    "tickers = [\"SPX Index\"]\n",
+    "date = '20240301'\n",
     "test_bdp = blp.bdp(strSecurity=tickers, strFields = strFields, strOverrideField = \"AMOUNT_OUTSTANDING_AS_OF_DT\", strOverrideValue = date )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0eba3ecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           PX_LAST    PX_VOLUME\n",
+      "SPX Index  5137.08  686959722.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_bdp)"
    ]
   },
   {
@@ -514,16 +553,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "82441b8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending request\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'MessageIterator' object has no attribute 'next'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m tickers \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRIY Index\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      4\u001b[0m startDate \u001b[38;5;241m=\u001b[39m datetime(\u001b[38;5;241m2024\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m28\u001b[39m) \n\u001b[1;32m----> 5\u001b[0m test_bds \u001b[38;5;241m=\u001b[39m \u001b[43mblp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstrSecurity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtickers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstrFields\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mstrFields\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msnapshot_date\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mstartDate\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[21], line 294\u001b[0m, in \u001b[0;36mBLP.bds\u001b[1;34m(self, strSecurity, strFields, snapshot_date, curr)\u001b[0m\n\u001b[0;32m    291\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m    293\u001b[0m \u001b[38;5;66;03m# Extract the response message\u001b[39;00m\n\u001b[1;32m--> 294\u001b[0m msg \u001b[38;5;241m=\u001b[39m \u001b[43mblpapi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMessageIterator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mevent\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnext\u001b[49m()\n\u001b[0;32m    295\u001b[0m \u001b[38;5;28mprint\u001b[39m(msg) \u001b[38;5;66;03m################\u001b[39;00m\n\u001b[0;32m    297\u001b[0m \u001b[38;5;66;03m# Fill message list\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'MessageIterator' object has no attribute 'next'"
+     ]
+    }
+   ],
    "source": [
     "# bds : \n",
     "strFields = [\"FIELD\"] # Composition d'un indice \n",
-    "tickers = [\"SPX Index\"]\n",
-    "date = '20200310'\n",
-    "test_bds = blp.bdh(strSecurity=tickers, strFields = strFields, snapshot_date = date) #, curr = \"USD\""
+    "tickers = [\"RIY Index\"]\n",
+    "startDate = datetime(2024,2,28) \n",
+    "test_bds = blp.bds(strSecurity=tickers, strFields = strFields, snapshot_date = startDate) #, curr = \"USD\""
    ]
   },
   {
@@ -662,6 +721,30 @@
     "test_bdh.to_excel(file_path_stocks, index=True)\n",
     "# df_compo_index.to_excel(file_path_stocks, index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12f8eca1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67cee01e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2b12b3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -680,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
